package com.example.dualist;
public class main1 {
    public static void main(String args[]){
        Mainapp.main(args);
    }
}
